--- a/Developmenthub_Website/Developmenthub_Website.csproj
+++ b/Developmenthub_Website/Developmenthub_Website.csproj
@@ -57,6 +57,8 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="fonts\customicon\Icons.svg" />
+    <Content Include="fonts\fontawesome-webfont.svg" />
     <Content Include="HubMaster.Master" />
     <Content Include="Resources\Bootstrap\css\bootstrap-theme.css.map" />
     <Content Include="Resources\Bootstrap\css\bootstrap.css.map" />
@@ -64,6 +66,20 @@
     <Content Include="Resources\Bootstrap\fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="Resources\Bootstrap\fonts\glyphicons-halflings-regular.woff" />
     <Content Include="Resources\Bootstrap\fonts\glyphicons-halflings-regular.woff2" />
+    <Content Include="Resources\fonts\customicon\Icons.eot" />
+    <Content Include="Resources\fonts\customicon\Icons.ttf" />
+    <Content Include="Resources\fonts\customicon\Icons.woff" />
+    <Content Include="Resources\fonts\fontawesome-webfont.eot" />
+    <Content Include="Resources\fonts\fontawesome-webfont.ttf" />
+    <Content Include="Resources\fonts\fontawesome-webfont.woff" />
+    <Content Include="Resources\fonts\FontAwesome.otf" />
+    <Content Include="fonts\customicon\Icons.eot" />
+    <Content Include="fonts\customicon\Icons.ttf" />
+    <Content Include="fonts\customicon\Icons.woff" />
+    <Content Include="fonts\fontawesome-webfont.eot" />
+    <Content Include="fonts\fontawesome-webfont.ttf" />
+    <Content Include="fonts\fontawesome-webfont.woff" />
+    <Content Include="fonts\FontAwesome.otf" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -86,7 +102,14 @@
     <Content Include="Resources\Bootstrap\js\bootstrap.js" />
     <Content Include="Resources\Bootstrap\js\bootstrap.min.js" />
     <Content Include="Resources\Bootstrap\js\npm.js" />
+    <Content Include="Resources\DevStyle\animate.css" />
+    <Content Include="Resources\DevStyle\custom-fonts.css" />
     <Content Include="Resources\DevStyle\Dev_StyleSheet_Main.css" />
+    <Content Include="Resources\DevStyle\flexslider.css" />
+    <Content Include="Resources\DevStyle\font-awesome.css" />
+    <Content Include="Resources\DevStyle\overwrite.css" />
+    <Content Include="Resources\fonts\customicon\Icons.svg" />
+    <Content Include="Resources\fonts\fontawesome-webfont.svg" />
     <Content Include="Resources\JQuery\jquery-1.11.3.min.js" />
     <Content Include="Web.config" />
   </ItemGroup>
