--- a/Developmenthub_Website/Developmenthub_Website.csproj
+++ b/Developmenthub_Website/Developmenthub_Website.csproj
@@ -64,6 +64,8 @@
     <Content Include="Resources\Bootstrap\fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="Resources\Bootstrap\fonts\glyphicons-halflings-regular.woff" />
     <Content Include="Resources\Bootstrap\fonts\glyphicons-halflings-regular.woff2" />
+    <Content Include="Contact_Us.aspx" />
+    <Content Include="contact.aspx" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -106,6 +108,20 @@
       <DependentUpon>index.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Contact_Us.aspx.cs">
+      <DependentUpon>Contact_Us.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Contact_Us.aspx.designer.cs">
+      <DependentUpon>Contact_Us.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="contact.aspx.cs">
+      <DependentUpon>contact.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="contact.aspx.designer.cs">
+      <DependentUpon>contact.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
